--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "react-native-swiper": "^1.6.0",
     "react-native-toast-notifications": "^3.4.0",
     "react-native-web": "~0.19.10",
-    "react-native-webview": "^13.10.5"
+    "react-native-webview": "^13.10.5",
+    "expo-dev-client": "~4.0.29"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
